--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -2,9 +2,9 @@ name: Docker build and Deploy
 
 on:
   push:
-    branches: ['main']
+    branches: [main]
   pull_request:
-    branches: ['main']
+    branches: [main]
 
 jobs:
   create-image-and-push-to-dockerhub:
@@ -31,34 +31,34 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: arun0kb/book-management-api:${{ github.sha }}
-
+          tags: niranjang2/books_management_service:${{ github.sha }}
+  
   setup-and-deploy:
-      needs: [create-image-and-push-to-dockerhub]
+    needs: [create-image-and-push-to-dockerhub]
 
-      name: Setup and Deploy
-      runs-on: ubuntu-latest
+    name: Setup and Deploy
+    runs-on: ubuntu-latest
 
-      permissions:
-        contents: 'read'
-        id-token: 'write'
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
-      steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GKE_SA }}
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GKE_SA }}
 
-      - name: Get GKE Credentials
-        uses: google-github-actions/get-gke-credentials@v1
-        with:
-          cluster_name: ${{ secrets.GKE_CLUSTER_NAME }}
-          location: ${{ secrets.GKE_CLUSTER_ZONE }}
+    - name: Get GKE Credentials
+      uses: google-github-actions/get-gke-credentials@v1
+      with:
+        cluster_name: ${{ secrets.GKE_CLUSTER_NAME }}
+        location: ${{ secrets.GKE_CLUSTER_ZONE }}
 
-      - name: Deploy on the GKE
-        run: |-
-          sed -i -e 's/DOCKER_IMG_TAG/'${{ github.sha }}'/' ./kubernetes/book-mgmt-api-deploy.yaml
-          kubectl apply -f ./kubernetes/
+    - name: Deploy on the GKE
+      run: |-
+        sed -i -e 's/DOCKER_IMG_TAG/'${{ github.sha }}'/' ./kubernetes/book-mgmt-api-deploy.yaml
+        kubectl apply -f ./kubernetes/
